==================
Unreleased Changes
==================

This file collects *unreleased* changes only.

For release notes, see:

  https://crate.io/docs/reference/en/latest/release_notes/index.html

For developers: changes should be recorded here (using RST syntax) as you are
developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.

Breaking Changes
================

Changes
=======

Fixes
=====

- The postgres wire protocol service can now be bound to IPv6 addresses as
  documented.

 - Fixed issue that caused ``NULL`` values to be displayed as
   empty objects in the console view of the Admin UI.

 - Fixed an issue that resulted in aliases overriding column names when a
   subselect is used and a column appears in the outer SELECT multiple times,
   without an alias and with alias or with multiple aliases. E.g.::

     SELECT a, a AS newcol FROM (SELECT a FROM t WHERE a > 1)
     SELECT a AS newcol1, a AS newcol2 FROM (SELECT a FROM t WHERE a > 1)